updated approve templates

--- a/backend/templates/emailtemplate.html
+++ b/backend/templates/emailtemplate.html
@@ -168,7 +168,7 @@ table, td { color: #000000; } #u_body a { color: #161a39; text-decoration: under
     <td style="padding-right: 0px;padding-left: 0px;" align="center">
       {% load static %}
 
-      <img align="center" border="0" src="https://i.ibb.co/m0fnmS4/llogo.png" alt="Logo" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 168.2px;" width="168.2"/>
+      <img align="center" border="0" src="https://i.ibb.co/m0fnmS4/llogo.png" alt="Logo" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;max-width: 200px;" width="200"/>
       
     </td>
   </tr>
@@ -228,7 +228,7 @@ table, td { color: #000000; } #u_body a { color: #161a39; text-decoration: under
       <td style="overflow-wrap:break-word;word-break:break-word;padding:0px 10px 30px;font-family:'Lato',sans-serif;" align="left">
         
   <div style="font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 140%; text-align: center;"><span style="font-size: 28px; line-height: 39.2px; color: #ffffff; font-family: Lato, sans-serif;">Congratulations!</span></p>
+    <p style="font-size: 14px; line-height: 140%; text-align: center;"><span style="font-size: 35px; line-height: 39.2px; color: #ffffff; font-family: Lato, sans-serif; font-weight: bolder;">Congratulations!</span></p>
   </div>
 
       </td>
@@ -289,8 +289,8 @@ table, td { color: #000000; } #u_body a { color: #161a39; text-decoration: under
   <!--[if mso]><style>.v-button {background: transparent !important;}</style><![endif]-->
 <div align="center">
   <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="" style="height:51px; v-text-anchor:middle; width:205px;" arcsize="2%"  stroke="f" fillcolor="#1C83E5"><w:anchorlock/><center style="color:#FFFFFF;"><![endif]-->
-    <a href="/" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #1C83E5; border-radius: 8px;-webkit-border-radius: 8px; -moz-border-radius: 8px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
-      <span style="display:block;padding:15px 40px;line-height:120%;"><span style="font-size: 18px; line-height: 21.6px;">Login to your account</span></span>
+    <a href="http://localhost:5173/login" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #1C83E5; border-radius: 8px;-webkit-border-radius: 8px; -moz-border-radius: 8px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px; height: 40px; display: flex; justify-content: center; align-items: center; width: 130px; box-shadow: 0 2px 8px #1C83E5;">
+      <span style="display:block;padding:15px 40px;line-height:120%;"><span style="font-size: 18px; line-height: 21.6px;">Login</span></span>
     </a>
     <!--[if mso]></center></v:roundrect><![endif]-->
 </div>
