--- a/backend/templates/rejectemailtemplate.html
+++ b/backend/templates/rejectemailtemplate.html
@@ -256,7 +256,7 @@ table, td { color: #000000; } #u_body a { color: #161a39; text-decoration: under
       <td style="overflow-wrap:break-word;word-break:break-word;padding:40px 40px 30px;font-family:'Lato',sans-serif;" align="left">
         
   <div style="font-size: 14px; line-height: 140%; text-align: center; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 140%;"><span style="font-size: 18px; line-height: 25.2px; color: #666666;">Thank you for your application to LaunchLab. After careful review and consideration, we regret to inform you that your application has not been selected for further advancement.
+    <p style="font-size: 14px; line-height: 140%;"><span style="font-size: 18px; line-height: 25.2px; color: #666666;">Thank you for your application to ChumCheck. After careful review and consideration, we regret to inform you that your application has not been selected for further advancement.
       While your proposal was strong, we had to make difficult decisions due to the high volume of applications we received. We appreciate your effort and creativity.
       We encourage you to continue pursuing your entrepreneurial goals. Rejections are a part of the journey, and each setback is an opportunity for growth. Don't be discouraged, and keep refining your ideas. 
       Thank you for considering LaunchLab for your startup journey. We wish you success in all your future endeavors.</span></p>
